# cdie

./: .env  Dockerfile  README.md  pyproject.toml  ruff.toml  run_tests.py
resources/keywords/: findings
resources/rulesets/: auditdate  auditor  findings  suppliers
src/cdie/: __init__.py  app.py  cli.py  config.py  loggingconfig.py  main.py  server.py
src/cdie/extraction/: auditdate.py  auditor.py  auditreport.py  confidence.py  extract.py  extractor.py  extractors.py  findings.py  regexps.py  rulesets.py  suppliers.py
src/cdie/extraction/extractors/: auditdate.py  auditor.py  extractor.py  findings.py  suppliers.py
src/cdie/extraction/textutils/: keywords.py  regexps.py
src/cdie/ingestion/: file_uploader.py  ingestion_api.py  pdfparser.py  pipeline.py
src/cdie/models/: audit.py
src/cdie/reports/: reportgenerator.py  reports_api.py  requestid.py
src/cdie/storage/: jsonfilestore.py
tests/: conftest.py
tests/extraction/: __init__.py  test_auditdate.py  test_auditor.py  test_compliance.py  test_confidence.py  test_organization.py
typings/pytesseract/: __init__.pyi  pytesseract.pyi
typings/spacy_layout/: __init__.pyi  layout.pyi  types.pyi  util.pyi
