[project]
name = "cdie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shyam Anand", email = "shyamwdr@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.7",
    "spacy-layout>=0.0.12",
    "spacy>=3.8.7",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pandas>=2.3.1",
    "ruff>=0.12.9",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "dotenv>=0.9.9",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
cli = "cdie:cli"
server = "cdie:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
